--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -140,6 +140,51 @@
 /* Mobile UI                                                                     */
 /*********************************************************************************/
 
+
+
+@media only screen
+
+and (min-device-width : 320px)
+
+and (max-device-width : 480px) {
+
+.form-all {
+
+width: 320px !important;
+
+}
+
+.form-line {
+
+padding-top: 0px !important;
+
+padding-bottom: 0px !important;
+
+padding-left: 3px !important;
+
+}
+
+img.form-image {
+
+max-width: 100% !important;
+
+height: auto !important;
+
+}
+
+#id_1.form-line {
+
+padding-left: 36px !important;
+
+padding-right: 36px !important;
+
+}
+
+}
+
+
+
+
 	#titleBar
 	{
 		background: none;
