--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -150,33 +150,33 @@ and (max-device-width : 480px) {
 
 .form-all {
 
-width: 320px !important;
+width: 320px;
 
 }
 
 .form-line {
 
-padding-top: 0px !important;
+padding-top: 0px;
 
-padding-bottom: 0px !important;
+padding-bottom: 0px;
 
-padding-left: 3px !important;
+padding-left: 3px;
 
 }
 
 img.form-image {
 
-max-width: 100% !important;
+max-width: 100%;
 
-height: auto !important;
+height: auto;
 
 }
 
 #id_1.form-line {
 
-padding-left: 36px !important;
+padding-left: 36px;
 
-padding-right: 36px !important;
+padding-right: 36px;
 
 }
 
